# crates/fm-transport-dto/src/lib.rs
@@ -54,10 +54,10 @@ pub use entry::{
 };
 pub use error::{ApplicationErrorCode, ApplicationErrorDto};
 pub use files::{
-    ArchiveCredentialRequestDto, LoadEditableFileRequestDto, LoadEditableFileResponseDto,
-    ReadFileRangeRequestDto, ReadFileRangeResponseDto, SaveEditableFileRequestDto,
-    SaveEditableFileResponseDto, SearchInFileMatchDto, SearchInFileRequestDto,
-    SearchInFileResponseDto,
+    ArchiveCredentialRequestDto, CalculateFolderSizeRequestDto, CalculateFolderSizeResponseDto,
+    LoadEditableFileRequestDto, LoadEditableFileResponseDto, ReadFileRangeRequestDto,
+    ReadFileRangeResponseDto, SaveEditableFileRequestDto, SaveEditableFileResponseDto,
+    SearchInFileMatchDto, SearchInFileRequestDto, SearchInFileResponseDto,
 };
 pub use health::{HealthDto, HealthStatusDto};
 pub use location::LocationDto;
